[package]
name = "egui-themer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21", features = ["serde"] }
egui = { version = "0.21", features = ["serde"] }
egui_demo_lib = "0.21"
rfd = "0.11"
handlebars = "4.3"
serde_json = "1.0"
rust-format = "0.3"
