[package]
name = "egui-themer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21", features = ["persistence", "serde"] }
egui_demo_lib = { version = "0.21", features = ["serde"] }
egui_file = "0.8.2"
handlebars = "4.3"
serde_json = "1.0"
rust-format = "0.3"
egui-notify = "0.6.0"

# [profile.release]
# panic = "abort"
# opt-level = "z"
# codegen-units = 1
# lto = true
# strip = true