[package]
name = "egui-themer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.28", features = ["persistence", "serde"] }
egui_demo_lib = { version = "0.28", features = ["serde"] }
rfd = "0.14"
handlebars = "6.0.0"
serde_json = "1.0"
rust-format = "0.3"
egui-notify = "0.15.0"
wasm-bindgen-futures = "*"
wasm-bindgen = "*"
futures = "0.3.30"

[dev-dependencies]
pretty_assertions = "1.4.0"
